--- a/design2.html
+++ b/design2.html
@@ -14,7 +14,7 @@
        
         <nav class="menu">
            <ul>
-               <li><a href="index0.html">Строим</a></li>
+               <li><a href="index.html">Строим</a></li>
                <li><a href="design2.html" id="grin">Проектируем</a></li>
                <li><a href="repair3.html">Ремонтируем</a></li>
                <li><a href="about4.html">О компании</a></li>
