--- a/repair3.html
+++ b/repair3.html
@@ -14,7 +14,7 @@
        
         <nav class="menu">
            <ul>
-               <li><a href="index0.html">Строим</a></li>
+               <li><a href="index.html">Строим</a></li>
                <li><a href="design2.html">Проектируем</a></li>
                <li><a href="repair3.html" id="grin">Ремонтируем</a></li>
                <li><a href="about4.html">О компании</a></li>
